# sigdig

./: Cargo.toml  LICENSE_INVERSE  README.md
src/: main.rs  util.rs
src/codecs/: huffman.rs  mod.rs  not.rs  pipe.rs
