[package]
name = "sigdig"
version = "0.1.0"
authors = ["R. Miles McCain <x1-key@sendmiles.email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
clap = "2.33"
log = "0.4"
simplelog = "0.5"
lazy_static = "1.4.0"

[profile.release]
debug = true